--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /.vs
 /MicroservicesLearning/.vs
 /MicroservicesLearning/MicroservicesLearning.PlatformService/obj
+/MicroservicesLearning/MicroservicesLearning.PlatformService/bin
