--- a/MicroservicesLearning/MicroservicesLearning.PlatformService/appsettings.Development.json
+++ b/MicroservicesLearning/MicroservicesLearning.PlatformService/appsettings.Development.json
@@ -2,7 +2,8 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning"
     }
-  }
+  },
+  "CommandServiceUri": "http://localhost:5260/api/c/platforms/"
 }
