--- a/MicroservicesLearning/k8s/commands-deploy.yaml
+++ b/MicroservicesLearning/k8s/commands-deploy.yaml
@@ -2,32 +2,32 @@ apiVersion: apps/v1
 kind: Deployment
 
 metadata: 
-  name: platforms-deploy
+  name: commands-deploy
 
 spec:
   replicas: 1
   selector: 
     matchLabels:
-      app: platformservice
+      app: commandservice
   template:
     metadata:
       labels:
-        app: platformservice
+        app: commandservice
     spec:
       containers: 
-        - name: platformservice
-          image: pathknower/platformservice:latest
+        - name: commandservice
+          image: pathknower/commandservice:latest
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: platforms-cluster-ip-srv
+  name: commands-cluster-ip-srv
 spec:
   type: ClusterIP
   selector:
-    app: platformservice
+    app: commandservice
   ports:
-    - name: platformservice
+    - name: commandservice
       protocol: TCP
       port: 80
       targetPort: 80
