--- a/MicroservicesLearning/MicroservicesLearning.PlatformService/appsettings.Production.json
+++ b/MicroservicesLearning/MicroservicesLearning.PlatformService/appsettings.Production.json
@@ -1,3 +1,6 @@
 {
-  "CommandServiceUri": "http://commands-cluster-ip-srv:80/api/c/platforms/"
+  "CommandServiceUri": "http://commands-cluster-ip-srv:80/api/c/platforms/",
+  "ConnectionStrings": {
+    "PlatformsConnection": "Server=mssql-plat-cluster-ip-srv,1433;Initial Catalog=platformsdb;TrustServerCertificate=True;User Id=sa;Password=pa55w0rd!;"
+  }
 }
