Added RabbitMQ publisher and listener for both services.

--- a/MicroservicesLearning/MicroservicesLearning.PlatformService/appsettings.Production.json
+++ b/MicroservicesLearning/MicroservicesLearning.PlatformService/appsettings.Production.json
@@ -2,5 +2,7 @@
   "CommandServiceUri": "http://commands-cluster-ip-srv:80/api/c/platforms/",
   "ConnectionStrings": {
     "PlatformsConnection": "Server=mssql-plat-cluster-ip-srv,1433;Initial Catalog=platformsdb;TrustServerCertificate=True;User Id=sa;Password=pa55w0rd!;"
-  }
+  },
+  "RabbitMQHost": "rabbitmq-cluster-ip-srv",
+  "RabbitMQPort": "5672"
 }
