--- a/MicroservicesLearning/MicroservicesLearning.PlatformService/appsettings.Development.json
+++ b/MicroservicesLearning/MicroservicesLearning.PlatformService/appsettings.Development.json
@@ -5,5 +5,7 @@
       "Microsoft": "Warning"
     }
   },
-  "CommandServiceUri": "http://localhost:5260/api/c/platforms/"
+  "CommandServiceUri": "http://localhost:5260/api/c/platforms/",
+  "RabbitMQHost": "localhost",
+  "RabbitMQPort": "5672"
 }
