Changed scripts according to the Docker build context.

--- a/MicroservicesLearning/k8s/platforms-deploy.yaml
+++ b/MicroservicesLearning/k8s/platforms-deploy.yaml
@@ -17,6 +17,7 @@ spec:
       containers: 
         - name: platformservice
           image: pathknower/platformservice:latest
+          imagePullPolicy: "Always"
 ---
 apiVersion: v1
 kind: Service
