--- a/MicroservicesLearning/k8s/commands-deploy.yaml
+++ b/MicroservicesLearning/k8s/commands-deploy.yaml
@@ -17,6 +17,7 @@ spec:
       containers: 
         - name: commandservice
           image: pathknower/commandservice:latest
+          imagePullPolicy: "Always"
 ---
 apiVersion: v1
 kind: Service
