--- a/MicroservicesLearning/MicroservicesLearning.CommandsService/appsettings.Production.json
+++ b/MicroservicesLearning/MicroservicesLearning.CommandsService/appsettings.Production.json
@@ -1,4 +1,5 @@
 {
   "RabbitMQHost": "rabbitmq-cluster-ip-srv",
-  "RabbitMQPort": "5672"
+  "RabbitMQPort": "5672",
+  "GrpcPlatform": "http://platforms-cluster-ip-srv:666"
 }
