--- a/MicroservicesLearning/MicroservicesLearning.PlatformService/appsettings.Production.json
+++ b/MicroservicesLearning/MicroservicesLearning.PlatformService/appsettings.Production.json
@@ -4,5 +4,17 @@
     "PlatformsConnection": "Server=mssql-plat-cluster-ip-srv,1433;Initial Catalog=platformsdb;TrustServerCertificate=True;User Id=sa;Password=pa55w0rd!;"
   },
   "RabbitMQHost": "rabbitmq-cluster-ip-srv",
-  "RabbitMQPort": "5672"
+  "RabbitMQPort": "5672",
+  "Kestrel": {
+    "Endpoints": {
+      "Grpc": {
+        "Protocols": "Http2",
+        "Url": "http://platforms-cluster-ip-srv:666"
+      },
+      "webApi": {
+        "Protocols": "Http1",
+        "Url": "http://platforms-cluster-ip-srv:80"
+      }
+    }
+  }
 }
