--- a/MicroservicesLearning/k8s/platforms-deploy.yaml
+++ b/MicroservicesLearning/k8s/platforms-deploy.yaml
@@ -32,3 +32,6 @@ spec:
       protocol: TCP
       port: 80
       targetPort: 80
+    - name: platform-grpc
+      port: 666
+      targetPort: 666
