--- a/MicroservicesLearning/MicroservicesLearning.PlatformService/MicroservicesLearning.PlatformService.csproj
+++ b/MicroservicesLearning/MicroservicesLearning.PlatformService/MicroservicesLearning.PlatformService.csproj
@@ -10,6 +10,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="docker_build.ps1" />
+    <None Remove="docker_push.ps1" />
+    <None Remove="refresh_image.ps1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
     <PackageReference Include="Grpc.AspNetCore" Version="2.50.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
