--- a/MicroservicesLearning/MicroservicesLearning.PlatformService/appsettings.Production.json
+++ b/MicroservicesLearning/MicroservicesLearning.PlatformService/appsettings.Production.json
@@ -5,6 +5,7 @@
   },
   "RabbitMQHost": "rabbitmq-cluster-ip-srv",
   "RabbitMQPort": "5672",
+  "RabbitMQExchangeName": "trigger",
   "Kestrel": {
     "Endpoints": {
       "Grpc": {
