--- a/MicroservicesLearning/MicroservicesLearning.CommandsService/appsettings.Development.json
+++ b/MicroservicesLearning/MicroservicesLearning.CommandsService/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "RabbitMQHost": "localhost",
   "RabbitMQPort": "5672",
-  "GrpcPlatform": "https://localhost:7098"
+  "GrpcPlatform": "https://localhost:7098",
+  "RabbitMQExchangeName": "trigger"
 }
