--- a/MicroservicesLearning/MicroservicesLearning.CommandsService/appsettings.Production.json
+++ b/MicroservicesLearning/MicroservicesLearning.CommandsService/appsettings.Production.json
@@ -1,5 +1,6 @@
 {
   "RabbitMQHost": "rabbitmq-cluster-ip-srv",
   "RabbitMQPort": "5672",
-  "GrpcPlatform": "http://platforms-cluster-ip-srv:666"
+  "GrpcPlatform": "http://platforms-cluster-ip-srv:666",
+  "RabbitMQExchangeName": "trigger"
 }
