--- a/MicroservicesLearning/MicroservicesLearning.PlatformService/appsettings.Development.json
+++ b/MicroservicesLearning/MicroservicesLearning.PlatformService/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "CommandServiceUri": "http://localhost:5260/api/c/platforms/",
   "RabbitMQHost": "localhost",
-  "RabbitMQPort": "5672"
+  "RabbitMQPort": "5672",
+  "RabbitMQExchange": "trigger"
 }
